Dark mode footer links focus fix

--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -393,10 +393,10 @@ h4 {
       --at-apply: border-none w-max;
        
       > :is(span.title) {
-        --at-apply: "bg-blue-10 text-blue font-bold rounded-full py-6 px-16 w-max hover:(transition-shadow ring-1 ring-blue dark:ring-white) focus:(transition-shadow ring-1 ring-blue dark:ring-white)";
+        --at-apply: "bg-blue-10 text-blue font-bold rounded-full py-6 px-16 w-max hover:(transition-shadow ring-1 ring-blue) focus:(transition-shadow ring-1 ring-blue)";
 
         .dark & {
-          --at-apply: "bg-white/30 text-white";
+          --at-apply: "bg-white/30 text-white hover:ring-white/50 focus:ring-white/50";
         }
       }
       
